# srdf_parser_py

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: srdf_parser_py-extras.cmake.em
scripts/: display_srdf
src/srdf_parser_py/: srdf.py
src/srdf_parser_py/xml_reflection/: __init__.py  core.py
test/: srdf_parser.test  test.py
